# mirror-project

./: .gitignore  HARDWARE.md  README.md  platformio.ini  pyproject.toml
docs/: LEARNING.md  POWER.md  PRODUCTION.md  SHOPPING.md
esphome/: README.md  mirror-light.yaml  secrets.yaml.example
firmware/: README.md
scripts/: build.py  flash_micropython.sh  simulate.py  upload.sh
src/: boot.py  config.py  main.py
src/core/: __init__.py  light.py  power.py  presence.py
src/hardware/: __init__.py
src/hardware/sensors/: __init__.py  base.py  factory.py  ultrasonic.py  vl53l0x.py
src/lib/: __init__.py  light.py  sensor.py
tests/: __init__.py  conftest.py  test_presence.py
