[project]
name = "mirror-project"
version = "0.1.0"
description = "Proyecto de domótica con ESP32 usando MicroPython"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "esptool>=5.2.0",
    "mpremote>=1.27.0",
    "platformio>=6.1.19",
]

[project.scripts]
flash = "scripts.flash_micropython:main"
upload = "scripts.upload:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
